--- a/style.css
+++ b/style.css
@@ -18,9 +18,17 @@ body{
     background-repeat: no-repeat;
 }
 
-.points, .time{
+.points{
     position: absolute;
     left: 0;
+    top: 0;
+    font-size: 3em;
+    color: white;
+}
+
+.time{
+    position: absolute;
+    right: 0;
     top: 0;
     font-size: 3em;
     color: white;
