--- a/Game.css
+++ b/Game.css
@@ -2,7 +2,8 @@
     cursor: url('./hammer.png') 50 50, pointer
 }
 
-body{
+.game{
+    position: relative;
     background-color: green;
     width: 100vw;
     height: 100vh;
@@ -36,7 +37,7 @@ body{
 }
 
 .modal{
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
